api/python/indigo.py

    self._lib.indigoDearomatize.restype = c_int
    self._lib.indigoDearomatize.argtypes = [c_int]
    self._lib.indigoFoldHydrogens.restype = c_int
    self._lib.indigoFoldHydrogens.argtypes = [c_int]
    self._lib.indigoUnfoldHydrogens.restype = c_int
    self._lib.indigoUnfoldHydrogens.argtypes = [c_int]
    self._lib.indigoLayout.restype = c_int
    self._lib.indigoLayout.argtypes = [c_int]
    self._lib.indigoSmiles.restype = c_char_p
    self._lib.indigoSmiles.argtypes = [c_int]
    self._lib.indigoExactMatch.restype = c_int
    self._lib.indigoExactMatch.argtypes = [c_int, c_int]
    self._lib.indigoName.restype = c_char_p
    self._lib.indigoName.argtypes = [c_int]
    self._lib.indigoSetName.restype = c_int
    self._lib.indigoSetName.argtypes = [c_int, c_char_p]
    self._lib.indigoHasProperty.restype = c_int
    self._lib.indigoHasProperty.argtypes = [c_int, c_char_p]
    self._lib.indigoGetProperty.restype = c_char_p
    self._lib.indigoGetProperty.argtypes = [c_int, c_char_p]
    self._lib.indigoSetProperty.restype = c_int
    self._lib.indigoSetProperty.argtypes = [c_int, c_char_p, c_char_p]
    self._lib.indigoRemoveProperty.restype = c_int
    self._lib.indigoRemoveProperty.argtypes = [c_int, c_char_p]
    self._lib.indigoIterateProperties.restype = c_int
    self._lib.indigoIterateProperties.argtypes = [c_int]
    self._lib.indigoCheckBadValence.restype = c_char_p
    self._lib.indigoCheckBadValence.argtypes = [c_int]
    self._lib.indigoCheckAmbiguousH.restype = c_char_p
    self._lib.indigoCheckAmbiguousH.argtypes = [c_int]
    self._lib.indigoFingerprint.restype = c_int
    self._lib.indigoFingerprint.argtypes = [c_int, c_char_p]
    self._lib.indigoCountBits.restype = c_int
    self._lib.indigoCountBits.argtypes = [c_int]
    self._lib.indigoCommonBits.restype = c_int
    self._lib.indigoCommonBits.argtypes = [c_int, c_int]
    self._lib.indigoSimilarity.restype = c_float
    self._lib.indigoSimilarity.argtypes = [c_int, c_int, c_char_p]
    self._lib.indigoIterateSDF.restype = c_int
    self._lib.indigoIterateSDF.argtypes = [c_int]
    self._lib.indigoIterateRDF.restype = c_int
    self._lib.indigoIterateRDF.argtypes = [c_int]
    self._lib.indigoIterateSmiles.restype = c_int
    self._lib.indigoIterateSmiles.argtypes = [c_int]
    self._lib.indigoIterateSDFile.restype = c_int
    self._lib.indigoIterateSDFile.argtypes = [c_char_p]
    self._lib.indigoIterateRDFile.restype = c_int
    self._lib.indigoIterateRDFile.argtypes = [c_char_p]
    self._lib.indigoIterateSmilesFile.restype = c_int
    self._lib.indigoIterateSmilesFile.argtypes = [c_char_p]
    self._lib.indigoRawData.restype = c_char_p
    self._lib.indigoRawData.argtypes = [c_int]
    self._lib.indigoTell.restype = c_int
    self._lib.indigoTell.argtypes = [c_int]
    self._lib.indigoSdfAppend.restype = c_int
    self._lib.indigoSdfAppend.argtypes = [c_int, c_int]
    self._lib.indigoSmilesAppend.restype = c_int
    self._lib.indigoSmilesAppend.argtypes = [c_int, c_int]
    self._lib.indigoCreateArray.restype = c_int
    self._lib.indigoCreateArray.argtypes = None
    self._lib.indigoArrayAdd.restype = c_int
    self._lib.indigoArrayAdd.argtypes = [c_int, c_int]
    self._lib.indigoArrayAt.restype = c_int
    self._lib.indigoArrayAt.argtypes = [c_int, c_int]
    self._lib.indigoArrayCount.restype = c_int
    self._lib.indigoArrayCount.argtypes = [c_int]
    self._lib.indigoArrayClear.restype = c_int
    self._lib.indigoArrayClear.argtypes = [c_int]
    self._lib.indigoIterateArray.restype = c_int
    self._lib.indigoIterateArray.argtypes = [c_int]
    self._lib.indigoMatchSubstructure.restype = c_int
    self._lib.indigoMatchSubstructure.argtypes = [c_int, c_int]
    self._lib.indigoMatchHighlight.restype = c_int
    self._lib.indigoMatchHighlight.argtypes = [c_int]
    self._lib.indigoMapAtom.restype = c_int
    self._lib.indigoMapAtom.argtypes = [c_int, c_int]
    self._lib.indigoCountSubstructureMatches.restype = c_int
    self._lib.indigoCountSubstructureMatches.argtypes = [c_int, c_int]
    self._lib.indigoExtractCommonScaffold.restype = c_int
    self._lib.indigoExtractCommonScaffold.argtypes = [c_int, c_char_p]
    self._lib.indigoAllScaffolds.restype = c_int
    self._lib.indigoAllScaffolds.argtypes = [c_int]
    self._lib.indigoDecomposeMolecules.restype = c_int
    self._lib.indigoDecomposeMolecules.argtypes = [c_int, c_int]
    self._lib.indigoDecomposedMoleculeScaffold.restype = c_int
    self._lib.indigoDecomposedMoleculeScaffold.argtypes = [c_int]
    self._lib.indigoIterateDecomposedMolecules.restype = c_int
    self._lib.indigoIterateDecomposedMolecules.argtypes = [c_int]
    self._lib.indigoDecomposedMoleculeHighlighted.restype = c_int
    self._lib.indigoDecomposedMoleculeHighlighted.argtypes = [c_int]
    self._lib.indigoDecomposedMoleculeWithRGroups.restype = c_int
    self._lib.indigoDecomposedMoleculeWithRGroups.argtypes = [c_int]
    self._lib.indigoNext.restype = c_int
    self._lib.indigoNext.argtypes = [c_int]
    self._lib.indigoHasNext.restype = c_int
    self._lib.indigoHasNext.argtypes = [c_int]
    self._lib.indigoIndex.restype = c_int
    self._lib.indigoIndex.argtypes = [c_int]
    self._lib.indigoToString.restype = c_char_p
    self._lib.indigoToString.argtypes = [c_int]
    self._lib.indigoReactionProductEnumerate.restype = c_int
    self._lib.indigoReactionProductEnumerate.argtypes = [c_int, c_int]

    self._lib.indigoToBuffer.restype = c_int
    self._lib.indigoToBuffer.argtypes = [c_int, POINTER(POINTER(c_char)), POINTER(c_int)]
 
    self._sid = self._lib.indigoAllocSessionId()
    self._lib.indigoSetSessionId(self._sid)

    self.countReferences = self._static_int(self._lib.indigoCountReferences)

    self.loadMolecule = self._static_obj_string(self._lib.indigoLoadMoleculeFromString)
    self.loadMoleculeFromFile = self._static_obj_string(self._lib.indigoLoadMoleculeFromFile)
    self.loadQueryMolecule = self._static_obj_string(self._lib.indigoLoadQueryMoleculeFromString)
    self.loadQueryMoleculeFromFile = self._static_obj_string(self._lib.indigoLoadQueryMoleculeFromFile)
    self.loadSmarts = self._static_obj_string(self._lib.indigoLoadSmartsFromString)
    self.loadSmartsFromFile = self._static_obj_string(self._lib.indigoLoadSmartsFromFile)
    self.loadReaction = self._static_obj_string(self._lib.indigoLoadReactionFromString)
    self.loadReactionFromFile = self._static_obj_string(self._lib.indigoLoadReactionFromFile)
    self.loadQueryReaction = self._static_obj_string(self._lib.indigoLoadQueryReactionFromString)
    self.loadQueryReactionFromFile = self._static_obj_string(self._lib.indigoLoadQueryReactionFromFile)
    self.createReaction = self._static_obj(self._lib.indigoCreateReaction)
    self.createQueryReaction = self._static_obj(self._lib.indigoCreateQueryReaction)
    self.createArray = self._static_obj(self._lib.indigoCreateArray)

    self.commonBits = self._static_int_obj_obj(self._lib.indigoCommonBits)

    self.iterateSDFile = self._static_obj_string(self._lib.indigoIterateSDFile)
    self.iterateRDFile = self._static_obj_string(self._lib.indigoIterateRDFile)
    self.iterateSmilesFile = self._static_obj_string(self._lib.indigoIterateSmilesFile)

    self.matchSubstructure = self._static_obj_obj_obj(self._lib.indigoMatchSubstructure)
    self.countSubstructureMatches = self._static_int_obj_obj(self._lib.indigoCountSubstructureMatches)
    self.extractCommonScaffold = self._static_obj_obj_string(self._lib.indigoExtractCommonScaffold)
    self.decomposeMolecules = self._static_obj_obj_obj(self._lib.indigoDecomposeMolecules)
    self.reactionProductEnumerate = self._static_obj_obj_obj(self._lib.indigoReactionProductEnumerate)

    self.IndigoObject.clone = self._member_obj(self._lib.indigoClone)

    self.IndigoObject.molfile = self._member_string(self._lib.indigoMolfile)
    self.IndigoObject.saveMolfile = self._member_void_string(self._lib.indigoSaveMolfileToFile)
    self.IndigoObject.cml = self._member_string(self._lib.indigoCml)
    self.IndigoObject.saveCml = self._member_void_string(self._lib.indigoSaveCmlToFile)
    self.IndigoObject.addReactant = self._member_void_obj(self._lib.indigoAddReactant)
    self.IndigoObject.addProduct  = self._member_void_obj(self._lib.indigoAddProduct)
    self.IndigoObject.countReactants = self._member_int(self._lib.indigoCountReactants)
    self.IndigoObject.countProducts = self._member_int(self._lib.indigoCountProducts)
    self.IndigoObject.countMolecules = self._member_int(self._lib.indigoCountMolecules)
    self.IndigoObject.iterateReactants = self._member_obj(self._lib.indigoIterateReactants)
    self.IndigoObject.iterateProducts  = self._member_obj(self._lib.indigoIterateProducts)
    self.IndigoObject.iterateMolecules  = self._member_obj(self._lib.indigoIterateMolecules)

    self.IndigoObject.rxnfile = self._member_string(self._lib.indigoRxnfile)
    self.IndigoObject.saveRxnfile = self._member_void_string(self._lib.indigoSaveRxnfileToFile)
    self.IndigoObject.automap = self._member_void_string(self._lib.indigoAutomap)

    self.IndigoObject.iterateAtoms = self._member_obj(self._lib.indigoIterateAtoms)
    self.IndigoObject.iteratePseudoatoms = self._member_obj(self._lib.indigoIteratePseudoatoms)
    self.IndigoObject.iterateRSites = self._member_obj(self._lib.indigoIterateRSites)
    self.IndigoObject.iterateRGroups = self._member_obj(self._lib.indigoIterateRGroups)
    self.IndigoObject.iterateRGroupFragments = self._member_obj(self._lib.indigoIterateRGroupFragments)
    self.IndigoObject.countAttachmentPoints = self._member_int(self._lib.indigoCountAttachmentPoints)
    self.IndigoObject.isPseudoatom = self._member_bool(self._lib.indigoIsPseudoatom)
    self.IndigoObject.isRSite = self._member_bool(self._lib.indigoIsRSite)
    self.IndigoObject.singleAllowedRGroup = self._member_int(self._lib.indigoSingleAllowedRGroup)
    self.IndigoObject.pseudoatomLabel = self._member_string(self._lib.indigoPseudoatomLabel)

    self.IndigoObject.degree = self._member_int(self._lib.indigoDegree)
    self.IndigoObject.charge = self._member_intptr(self._lib.indigoGetCharge)
    self.IndigoObject.explicitValence = self._member_intptr(self._lib.indigoGetExplicitValence)
    self.IndigoObject.radicalElectrons = self._member_intptr(self._lib.indigoGetRadicalElectrons)
    self.IndigoObject.atomNumber = self._member_int(self._lib.indigoAtomNumber)
    self.IndigoObject.atomIsotope = self._member_int(self._lib.indigoAtomIsotope)

    self.IndigoObject.resetCharge = self._member_void(self._lib.indigoResetCharge)
    self.IndigoObject.resetExplicitValence = self._member_void(self._lib.indigoResetExplicitValence)
    self.IndigoObject.resetRadical = self._member_void(self._lib.indigoResetRadical)
    self.IndigoObject.resetIsotope = self._member_void(self._lib.indigoResetIsotope)

    self.IndigoObject.countAtoms = self._member_int(self._lib.indigoCountAtoms)
    self.IndigoObject.countBonds = self._member_int(self._lib.indigoCountBonds)
    self.IndigoObject.countPseudoatoms = self._member_int(self._lib.indigoCountPseudoatoms)
    self.IndigoObject.countRSites = self._member_int(self._lib.indigoCountRSites)

    self.IndigoObject.iterateBonds = self._member_obj(self._lib.indigoIterateBonds)
    self.IndigoObject.bondOrder = self._member_int(self._lib.indigoBondOrder)
    self.IndigoObject.bondStereo = self._member_int(self._lib.indigoBondStereo)

    self.IndigoObject.iterateNeighbors = self._member_obj(self._lib.indigoIterateNeighbors)
    self.IndigoObject.bond = self._member_obj(self._lib.indigoBond)
    self.IndigoObject.getAtom = self._member_obj_int(self._lib.indigoGetAtom)
    self.IndigoObject.getBond = self._member_obj_int(self._lib.indigoGetBond)
